fixed spinner and user profile page also fixed and sidenav overflow also fixed

--- a/src/app/tasks/task/task.component.scss
+++ b/src/app/tasks/task/task.component.scss
@@ -1,8 +1,8 @@
 @import "../../.././styles/styles.variable.scss";
 
 .task--page--wrapper {
-  padding: 50px 0px;
   min-height: 500px;
+  padding: 20px 0px 60px;
   .task--container--wrapperr {
     width: 75%;
     margin: 0 auto;
