--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -1,5 +1,6 @@
 @import "../.././styles/styles.variable.scss";
 .user--profile--page--wrapper {
+  min-height: 500px;
   .profile--card {
     padding: 30px 0px 50px;
     position: relative;
