--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,14 +16,20 @@ body {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  position: absolute;
+  position: fixed;
   background-color: lighten($dark-black, 3);
   @include flexWrap($align-items:center,$justify-content: center);
 }
 
-.mat-progress-spinner circle, .mat-spinner circle {
-  stroke: #1ac1a4;
-}
+.mat-progress-spinner circle, .mat-spinner circle { stroke: #1ac1a4; }
+
+.mat-drawer:not(.mat-drawer-side) { position: fixed; }
+
+.mat-drawer-backdrop { position: fixed !important; }
+
+.mat-drawer-container { position: static !important; }
+
+.mat-drawer { left: 0; width: 70%; z-index: 9999 !important; }
 
 p {
   margin: 0px;
@@ -103,16 +109,6 @@ input {
       }
     }
   }
-}
-
-.mat-drawer-container {
-  position: static !important;
-}
-
-.mat-drawer {
-  left: 0;
-  width: 70%;
-  z-index: 9999 !important;
 }
 
 .common--login--page {
